--- a/public/Gemfile
+++ b/public/Gemfile
@@ -13,7 +13,7 @@ gem 'carrierwave-base64', '~> 2.2.0'
 gem 'fog', '~> 1.38.0'
 gem 'chunky_png', '~> 1.3.7'
 # local
-# gem 'tzinfo-data', platforms:[:mingw, :mswin]
+gem 'tzinfo-data', platforms:[:mingw, :mswin]
 gem 'stripe'
 
 # To use ActiveModel has_secure_password
@@ -51,12 +51,12 @@ end
 
 group :production do
   # server
-  gem 'rails_12factor'
-  gem "unicorn-rails"
+  # gem 'rails_12factor'
+  # gem "unicorn-rails"
   # 
   # local
-  # gem 'rails_12factor'
-  # gem 'passenger'
+  gem 'rails_12factor'
+  gem 'passenger'
 end
 
 # gems for integrations
